Introducing drawn test result card as separate state into the game.
Front-end no longer expects drawn card to be return as part of POST,
this will be sent via websocket message instead (TBD).